# vkd3d-proton

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: cv2pdb.cmake  glsl.cmake
include/: vkd3d_win32.h
libs/vkd3d/: swapchain.c
tests/: d3d12.c  descriptor_performance.c
